# mailn

./: Cargo.toml  Dockerfile  README.md
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230211232617_create_idempotency_table.sql
scripts/: init_db.sh  init_redis.sh
src/: authentication.rs  configuration.rs  domain.rs  email_client.rs  main.rs  startup.rs  telemetry.rs  utils.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/home/: home.html
src/routes/login/: get.rs  login.html  mod.rs  post.rs
tests/: health_check.rs
tests/api/: admin_dashboard.rs  change_password.rs  helpers.rs  login.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
